# restlink

./: .gitignore  CHANGELOG.md  README.md  justfile  pyproject.toml  pytest.ini  setup.py
docs/: authentication_and_validation.md  automatic_routes.md  installation.md  introduction.md  schema_configuration.md  schemas.md  usage_overview.md
instance/: test.db
src/restlink/: __init__.py  api.py  exceptions.py  exposer.py  exposer_flask.py  schema.py  schema_db.py  util.py
tests/: conftest.py  test_api.py  test_doc_code.py  test_exposer.py  test_exposer_flask.py  test_schema.py  test_schema_db.py
tests/fixtures/: __init__.py  db.py  flask.py  schemas.py  util.py
tests/fixtures/test_module/: __init__.py  app.py  model_canal.py  schema_canal.py
